template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8saasauditdeprecatedingress
spec:
  crd:
    spec:
      names:
        kind: k8saasAuditDeprecatedIngress
            
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8saasauditdeprecatedingress

        # This violation check if the field spec.ingressClassName is present
        violation[{"msg": msg}] {
           input.request.object.spec.ingressClassName
           msg := "Fied spec.ingressClassName is missing"
        }

        # This violation check if the field metadata.annotations.kubernetes.io/ingress.class is absent
        violation[{"msg": msg}] {
           not input.request.object.metadata.annotations.kubernetes.io/ingress.class
           msg := "Fied metadata.annotations.kubernetes.io/ingress.class should not be present (deprecated)"
        }
